--- a/style.css
+++ b/style.css
@@ -5,3 +5,9 @@ body {
     background: linear-gradient(0deg, rgb(83, 87, 92) 0%, rgba(0, 0, 0, 0) 25%);
     height: 100vh;
 }
+
+h1 {
+    margin-top: 0px;
+    margin-bottom: 5px;
+    font-size: 3.5em;
+}
