--- a/style.css
+++ b/style.css
@@ -28,3 +28,11 @@ h1 {
 #controller-connected-area {
     display: none;
 }
+
+#controller-not-connected-area {
+    color: darkred;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
