added spinning loader

--- a/style.css
+++ b/style.css
@@ -36,3 +36,29 @@ h1 {
     align-items: center;
     gap: 10px;
 }
+
+#rumble-on-button-press-area {
+    margin-bottom: 10px;
+}
+
+.loader {
+    display: inline-block;
+    border: 8px solid #484848;
+    border-radius: 50%;
+    border-top: 8px solid #3498db;
+    border-bottom: 8px solid #3498db;
+    width: 20px;
+    height: 20px;
+    -webkit-animation: spin 1.5s linear infinite;
+    animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
