--- a/style.css
+++ b/style.css
@@ -62,3 +62,27 @@ h1 {
         transform: rotate(360deg);
     }
 }
+
+/* button grid */
+#buttons {
+    display: grid;
+    grid-template-columns: repeat(8, minmax(min-content, max-content));
+    grid-gap: 15px;
+    justify-content: center;
+    justify-items: start;
+}
+
+.button {
+    background-color: rgb(223, 222, 222);
+    height: 50px;
+    min-width: 50px;
+    display: flex;
+}
+
+.button-text-area {
+    padding: 0px 10px;
+}
+
+.button-name {
+    color: grey;
+}
