added sensitivity gate for stick movement

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     margin: 0px;
 
     background: linear-gradient(0deg, rgb(83, 87, 92) 0%, rgba(0, 0, 0, 0) 25%);
+    background-attachment: fixed;
     height: 100vh;
 }
 
@@ -90,4 +91,13 @@ h1 {
 /* controller */
 .selected-button {
     fill: rgb(231, 24, 24);
+}
+
+.axis-name {
+    color: grey;
+    font-weight: bolder;
+}
+
+.axis-value {
+    color: rgb(126, 54, 54);
 }
